fix multi-line value copy and don't center align when editing

--- a/envkey-assets/source/stylesheets/modules/environments/environments_grid/_cell.sass
+++ b/envkey-assets/source/stylesheets/modules/environments/environments_grid/_cell.sass
@@ -131,6 +131,11 @@
       resize: none
       padding-top: 12px
 
+    textarea.multiline
+      text-align: left
+      padding-top: 8px
+      line-height: 1.4
+
   .cell.entry-cell
     input, textarea
       text-align: left
